--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 <h2 class="visually-hidden">Our Excellence</h2>
                 <ul class="excellence-menu list">
                     <li class="excellence-menu-item ">
+                        <div class="second-sctn-icn"> <svg>
+                                <use> href </use>
+                            </svg> </div>
                         <h3 class="title-second-section">Strategy</h3>
                         <p class="second-section-p">Our goal is to identify the business problem to walk away with the
                             perfect and creative
