--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <h2 class="visually-hidden">Our Excellence</h2>
                 <ul class="excellence-menu list">
                     <li class="excellence-menu-item ">
-                        <div class="second-sctn-icn"> <svg>
-                                <use> href </use>
+                        <div class="second-sctn-icn"> <svg width="64" height="64">
+                                <use href=" ./images/icons.svg#icon-clock-1"> </use>
                             </svg> </div>
                         <h3 class="title-second-section">Strategy</h3>
                         <p class="second-section-p">Our goal is to identify the business problem to walk away with the
@@ -70,6 +70,9 @@
                         </p>
                     </li>
                     <li class="excellence-menu-item">
+                        <div class="second-sctn-icn"> <svg width="64" height="64">
+                                <use href=" ./images/icons.svg#icon-clock"> </use>
+                            </svg> </div>
                         <h3 class="title-second-section">Punctuality</h3>
                         <p class="second-section-p">Bring the key message to the brand's audience for the best price
                             within
@@ -78,14 +81,21 @@
                             time.</p>
                     </li>
                     <li class="excellence-menu-item">
-                        <h3 class="title-second-section">Diligence</h3>
-                        <p class="second-section-p">Research and confirm brands that present the strongest digital
+                        <div class="second-sctn-icn"> <svg width="64" height="64">
+                                <use href=" ./images/icons.svg#icon-diagram"> </use>
+                            </svg> </div>
+                        <h3 class=" title-second-section">Diligence</h3>
+                        <p class="second-section-p">Research and confirm brands that present the strongest
+                            digital
                             growth
                             opportunities and
                             minimize
                             risk.</p>
                     </li>
                     <li class="excellence-menu-item">
+                        <div class="second-sctn-icn"> <svg width="64" height="64">
+                                <use href=" ./images/icons.svg#icon-astronaut"> </use>
+                            </svg> </div>
                         <H3 class="title-second-section">Technologies</H3>
                         <p class="second-section-p">Design practice focused on digital experiences. We bring forth a
                             deep
@@ -97,7 +107,7 @@
         </section>
         <section class="offers-menu-section">
             <div class="container-li container">
-                <h2 class="title-third-section">What are we doing</h2>
+                <h2 class="main-title">What are we doing</h2>
                 <ul class="offers-menu list">
                     <li class="offers-menu-item">
                         <img class="photo" src="./images/desktop.jpg" alt="desktop" width="360" />
@@ -117,14 +127,36 @@
         <section class="team-menu-section">
             <div class="container">
 
-                <h2 class="team-menu">Our Team</h2>
+                <h2 class="main-title">Our Team</h2>
                 <ul class="team list">
                     <li class="team-menu-item">
                         <img class="photo" src="./images/mark.jpg" alt="mark's photo" width="264" />
                         <div class="employee">
                             <h3 class="name">Mark Guerrero</h3>
                             <p class="role">Product Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg></a>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
 
+                            </ul>
                         </div>
 
                     </li>
@@ -133,6 +165,29 @@
                         <div class="employee">
                             <h3 class="name">Tom Ford</h3>
                             <p class="role">Frontend Developer</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg></a>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
+
+                            </ul>
 
                         </div>
 
@@ -142,6 +197,29 @@
                         <div class="employee">
                             <h3 class="name">Camila Garcia</h3>
                             <p class="role">Marketing</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg></a>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
+
+                            </ul>
 
                         </div>
 
@@ -151,7 +229,29 @@
                         <div class="employee">
                             <h3 class="name">Daniel Wilson</h3>
                             <p class="role">UI Designer</p>
+                            <ul class="social-list list">
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
+                                            height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg></a>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="social-item">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
 
+                            </ul>
                         </div>
 
                     </li>
@@ -159,6 +259,57 @@
 
             </div>
 
+        </section>
+        <section class="customers">
+            <div class="container">
+                <h2 class="main-title">
+                    Customers
+                </h2>
+                <ul class="customers-list list">
+                    <li class="customers-list-item">
+                        <a href="#" target="_blank" class="customers-link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo  "></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a href="#" target="_blank" class="customers-link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-group "></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a href="#" target="_blank" class="customers-link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-group-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a href="#" target="_blank" class="customers-link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-group-2  "></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a href="#" target="_blank" class="customers-link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo-1 "></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-list-item">
+                        <a href="#" target="_blank" class="customers-link">
+                            <svg class="customers-icon" width="104" height="56">
+                                <use href="./images/icons.svg#icon-group-3 "></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="bottom-logo-s">
@@ -169,6 +320,29 @@
                 marketing &
                 growth solutions.</p>
 
+            <ul class="social-list list">
+                <h3 class="title-footer">Social media</h3>
+                <li class="social-item">
+                    <a class="social-link" href="https://www.instagram.com/"><svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg></a>
+                <li class="social-item">
+                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg></a>
+                </li>
+                <li class="social-item">
+                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg></a>
+                </li>
+                <li class="social-item">
+                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg></a>
+                </li>
+
+            </ul>
         </div>
 
     </footer>
