--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </li>
                     <li class="excellence-menu-item">
                         <div class="second-sctn-icn"> <svg width="64" height="64">
-                                <use href=" ./images/icons.svg#icon-clock"> </use>
+                                <use href=" ./images/icons.svg#id=icon-clock"> </use>
                             </svg> </div>
                         <h3 class="title-second-section">Punctuality</h3>
                         <p class="second-section-p">Bring the key message to the brand's audience for the best price
