--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <ul class="excellence-menu list">
                     <li class="excellence-menu-item ">
                         <div class="second-sctn-icn"> <svg width="64" height="64">
-                                <use href=" ./images/icons.svg#icon-clock-1"> </use>
+                                <use href=" ./images/icons.svg#icon-antenna"> </use>
                             </svg> </div>
                         <h3 class="title-second-section">Strategy</h3>
                         <p class="second-section-p">Our goal is to identify the business problem to walk away with the
@@ -71,7 +71,7 @@
                     </li>
                     <li class="excellence-menu-item">
                         <div class="second-sctn-icn"> <svg width="64" height="64">
-                                <use href=" ./images/icons.svg#id=icon-clock"> </use>
+                                <use href=" ./images/icons.svg#icon-clock"> </use>
                             </svg> </div>
                         <h3 class="title-second-section">Punctuality</h3>
                         <p class="second-section-p">Bring the key message to the brand's audience for the best price
