--- a/index.html
+++ b/index.html
@@ -313,36 +313,40 @@
         </section>
     </main>
     <footer class="bottom-logo-s">
-        <div class="container">
-            <a class="logo-b link" href="./index.html">Web<span class="second-logo-b">Studio</span>
-            </a>
-            <p class="promotion-slogan"> Increase the flow of customers and sales for your business with digital
-                marketing &
-                growth solutions.</p>
+        <div class="footer-box container">
+            <div>
+                <a class="logo-b link" href="./index.html">Web<span class="second-logo-b">Studio</span>
+                </a>
+                <p class="promotion-slogan"> Increase the flow of customers and sales for your business with digital
+                    marketing &
+                    growth solutions.</p>
+            </div>
 
-            <h3 class="title-footer">Social media</h3>
-            <ul class="social-list list">
-                <li class="social-item">
-                    <a class="social-link" href="https://www.instagram.com/"><svg width="16" height="16">
-                            <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></a>
-                <li class="social-item">
-                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
-                            <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></a>
-                </li>
-                <li class="social-item">
-                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
-                            <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></a>
-                </li>
-                <li class="social-item">
-                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></a>
-                </li>
+            <div>
+                <h3 class="title-footer">Social media</h3>
+                <ul class="social-list footer-social-list list">
+                    <li class="social-item">
+                        <a class="social-link" href="https://www.instagram.com/"><svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg></a>
+                    <li class="social-item">
+                        <a class="social-link" href="https://www.facebook.com/"><svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="https://twitter.com/"><svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="https://www.linkedin.com/"><svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
 
     </footer>
