--- a/index.html
+++ b/index.html
@@ -136,22 +136,25 @@
                             <p class="role">Product Designer</p>
                             <ul class="social-list list">
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
-                                            height="16">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg></a>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://twitter.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -167,22 +170,25 @@
                             <p class="role">Frontend Developer</p>
                             <ul class="social-list list">
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
-                                            height="16">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg></a>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://twitter.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -199,22 +205,25 @@
                             <p class="role">Marketing</p>
                             <ul class="social-list list">
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
-                                            height="16">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg></a>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://twitter.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -231,22 +240,25 @@
                             <p class="role">UI Designer</p>
                             <ul class="social-list list">
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.instagram.com/"><svg width="16"
-                                            height="16">
+                                    <a class="social-link" href="https://www.instagram.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg></a>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.facebook.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.facebook.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://twitter.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://twitter.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a>
                                 </li>
                                 <li class="social-item">
-                                    <a class="social-link" href="https://www.linkedin.com/"><svg width="16" height="16">
+                                    <a class="social-link" href="https://www.linkedin.com/"><svg class="social-icon"
+                                            width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -326,21 +338,25 @@
                 <h3 class="title-footer">Social media</h3>
                 <ul class="social-list footer-social-list list">
                     <li class="social-item">
-                        <a class="social-link" href="https://www.instagram.com/"><svg width="24" height="24">
+                        <a class="social-link" href="https://www.instagram.com/"><svg class="social-icon" width="24"
+                                height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg></a>
                     <li class="social-item">
-                        <a class="social-link" href="https://www.facebook.com/"><svg width="24" height="24">
+                        <a class="social-link" href="https://www.facebook.com/"><svg class="social-icon" width="24"
+                                height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg></a>
                     </li>
                     <li class="social-item">
-                        <a class="social-link" href="https://twitter.com/"><svg width="24" height="24">
+                        <a class="social-link" href="https://twitter.com/"><svg class="social-icon" width="24"
+                                height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg></a>
                     </li>
                     <li class="social-item">
-                        <a class="social-link" href="https://www.linkedin.com/"><svg width="24" height="24">
+                        <a class="social-link" href="https://www.linkedin.com/"><svg class="social-icon" width="24"
+                                height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg></a>
                     </li>
