--- a/index.html
+++ b/index.html
@@ -274,9 +274,7 @@
         </section>
         <section class="customers">
             <div class="container">
-                <h2 class="main-title">
-                    Customers
-                </h2>
+                <h2 class="main-title">Customers</h2>
                 <ul class="customers-list list">
                     <li class="customers-list-item">
                         <a href="#" target="_blank" class="customers-link">
@@ -335,7 +333,7 @@
             </div>
 
             <div>
-                <h3 class="title-footer">Social media</h3>
+                <p class="title-footer">Social media</p>
                 <ul class="social-list footer-social-list list">
                     <li class="social-item">
                         <a class="social-link" href="https://www.instagram.com/"><svg class="social-icon" width="24"
