--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     </main>
     <footer class="bottom-logo-s">
         <div class="footer-box container">
-            <div>
+            <div class="promotion-box">
                 <a class="logo-b link" href="./index.html">Web<span class="second-logo-b">Studio</span>
                 </a>
                 <p class="promotion-slogan"> Increase the flow of customers and sales for your business with digital
