--- a/portfolio.html
+++ b/portfolio.html
@@ -63,29 +63,30 @@
                 </ul>
 
                 <ul class="frs-smpls list">
-                    <li class="sample"> <a class=" link" href=""> <img class="photo" src="./images/img.jpg"
+                    <li class="sample"> <a class=" sample-link link" href=""> <img class="photo" src="./images/img.jpg"
                                 alt="app concept">
                             <div class="div-itm">
                                 <h2 class="offers-samples">Banking App Interface Concept</h2>
                                 <p class="offers-samples-p">App</p>
                             </div>
                         </a> </li>
-                    <li class="sample"> <a class="link" href=""> <img class="photo" src="./images/payment.jpg"
-                                alt="payment samples">
+                    <li class="sample"> <a class=" sample-link link" href=""> <img class="photo"
+                                src="./images/payment.jpg" alt="payment samples">
                             <div class="div-itm">
                                 <h2 class="offers-samples">Cashless Payment</h2>
                                 <p class="offers-samples-p"> Marketing</p>
                             </div>
                         </a></li>
                     <li class="sample">
-                        <a class="link" href=""> <img class="photo" src="./images/interface.jpg" alt="laptop interface">
+                        <a class=" sample-link link" href=""> <img class="photo" src="./images/interface.jpg"
+                                alt="laptop interface">
                             <div class="div-itm">
                                 <h2 class="offers-samples">Meditation App </h2>
                                 <p class="offers-samples-p"> App</p>
                             </div>
                         </a>
                     </li>
-                    <li class="sample"> <a class="link" href=""> <img class="photo" src="./images/car.jpg"
+                    <li class="sample"> <a class=" sample-link link" href=""> <img class="photo" src="./images/car.jpg"
                                 alt="driving man">
                             <div class="div-itm">
                                 <h2 class="offers-samples">Taxi Service </h2>
@@ -94,7 +95,7 @@
 
                         </a>
                     </li>
-                    <li class="sample"> <a class="link" href=""><img class="photo" src="./images/moon.jpg"
+                    <li class="sample"> <a class=" sample-link link" href=""><img class="photo" src="./images/moon.jpg"
                                 alt="screen illustration">
                             <div class="div-itm">
 
@@ -103,30 +104,30 @@
                             </div>
                         </a>
                     </li>
-                    <li class="sample"><a class="link" href=""><img class="photo" src="./images/courses.jpg"
-                                alt="a student">
+                    <li class="sample"><a class=" sample-link link" href=""><img class="photo"
+                                src="./images/courses.jpg" alt="a student">
                             <div class="div-itm">
 
                                 <h2 class="offers-samples">Online Courses</h2>
                                 <p class="offers-samples-p">Marketing</p>
                             </div>
                         </a></li>
-                    <li class="sample"><a class="link" href=""><img class="photo" src="./images/concept.jpg"
-                                alt="callories app ui">
+                    <li class="sample"><a class=" sample-link link" href=""><img class="photo"
+                                src="./images/concept.jpg" alt="callories app ui">
                             <div class="div-itm">
 
                                 <h2 class="offers-samples">Instagram Stories Concept</h2>
                                 <p class="offers-samples-p">Design</p>
                             </div>
                         </a></li>
-                    <li class="sample"> <a class="link" href=""> <img class="photo" src="./images/food.jpg"
+                    <li class="sample"> <a class=" sample-link link" href=""> <img class="photo" src="./images/food.jpg"
                                 alt="veggies">
                             <div class="div-itm">
                                 <h2 class="offers-samples">Organic Food</h2>
                                 <p class="offers-samples-p">Web Site</p>
                             </div>
                         </a></li>
-                    <li class="sample"><a class="link" href=""><img class="photo" src="./images/coffee.jpg"
+                    <li class="sample"><a class=" sample-link link" href=""><img class="photo" src="./images/coffee.jpg"
                                 alt="man pouring coffee">
                             <div class="div-itm">
                                 <h2 class="offers-samples">Fresh Coffee</h2>
@@ -140,17 +141,47 @@
 
     </main>
     <footer class="bottom-logo-s">
-        <div class="container">
-            <a class="logo-b link" href="./index.html">Web<span class="second-logo-b">Studio</span>
-            </a>
-            <p class="promotion-slogan"> Increase the flow of customers and sales for your business with digital
-                marketing &
-                growth solutions.</p>
+        <div class="footer-box container">
+            <div class="promotion-box">
+                <a class="logo-b link" href="./index.html">Web<span class="second-logo-b">Studio</span>
+                </a>
+                <p class="promotion-slogan"> Increase the flow of customers and sales for your business with digital
+                    marketing &
+                    growth solutions.</p>
+            </div>
 
+            <div>
+                <p class="title-footer">Social media</p>
+                <ul class="social-list footer-social-list list">
+                    <li class="social-item">
+                        <a class="social-link" href="https://www.instagram.com/"><svg class="social-icon" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg></a>
+                    <li class="social-item">
+                        <a class="social-link" href="https://www.facebook.com/"><svg class="social-icon" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="https://twitter.com/"><svg class="social-icon" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="https://www.linkedin.com/"><svg class="social-icon" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
+
+                </ul>
+            </div>
         </div>
 
     </footer>
-
 </body>
 
 
